new references and comparison figure, more paper writing

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,76 @@
+@article{Chang2013,
+abstract = {Future weak lensing surveys potentially hold the highest statistical power for constraining cosmological parameters compared to other cosmological probes. The statistical power of a weak lensing survey is determined by the sky coverage, the inverse of the noise in shear measurements, and the galaxy number density. The combination of the latter two factors is often expressed in terms of {\$}n{\_}{\{}\backslashrm eff{\}}{\$} -- the "effective number density of galaxies used for weak lensing measurements". In this work, we estimate {\$}n{\_}{\{}\backslashrm eff{\}}{\$} for the Large Synoptic Survey Telescope (LSST) project, the most powerful ground-based lensing survey planned for the next two decades. We investigate how the following factors affect the resulting {\$}n{\_}{\{}\backslashrm eff{\}}{\$} of the survey with detailed simulations: (1) survey time, (2) shear measurement algorithm, (3) algorithm for combining multiple exposures, (4) inclusion of data from multiple filter bands, (5) redshift distribution of the galaxies, and (6) masking and blending. For the first time, we quantify in a general weak lensing analysis pipeline the sensitivity of {\$}n{\_}{\{}\backslashrm eff{\}}{\$} to the above factors. We find that with current weak lensing algorithms, expected distributions of observing parameters, and all lensing data ({\$}r{\$}- and {\$}i{\$}-band, covering 18,000 degree{\$}{\^{}}{\{}2{\}}{\$} of sky) for LSST, {\$}n{\_}{\{}\backslashrm eff{\}} \backslashapprox37{\$} arcmin{\$}{\^{}}{\{}-2{\}}{\$} before considering blending and masking, {\$}n{\_}{\{}\backslashrm eff{\}} \backslashapprox31{\$} arcmin{\$}{\^{}}{\{}-2{\}}{\$} when rejecting seriously blended galaxies and {\$}n{\_}{\{}\backslashrm eff{\}} \backslashapprox26{\$} arcmin{\$}{\^{}}{\{}-2{\}}{\$} when considering an additional 15{\%} loss of galaxies due to masking. With future improvements in weak lensing algorithms, these values could be expected to increase by up to 20{\%}. Throughout the paper, we also stress the ways in which {\$}n{\_}{\{}\backslashrm eff{\}}{\$} depends on our ability to understand and control systematic effects in the measurements.},
+archivePrefix = {arXiv},
+arxivId = {1305.0793},
+author = {Chang, C. and Jarvis, M. and Jain, B. and Kahn, S. M. and Kirkby, D. and Connolly, A. and Krughoff, S. and Peng, E. H. and Peterson, J. R.},
+doi = {10.1093/mnras/stt1156},
+eprint = {1305.0793},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/54fadb2badfe5a24dfade35e6657e71857dc7fc7.pdf:pdf},
+issn = {0035-8711},
+journal = {Mon. Not. R. Astron. Soc.},
+keywords = {Cosmology: observations,Methods: data analysis},
+month = {sep},
+number = {3},
+pages = {2121--2135},
+title = {{The effective number density of galaxies for weak lensing measurements in the LSST project}},
+url = {https://arxiv.org/pdf/1305.0793.pdf https://academic.oup.com/mnras/article-lookup/doi/10.1093/mnras/stt1156},
+volume = {434},
+year = {2013}
+}
+@article{Shu2008,
+abstract = {While both isothermal and NFW-based mass models for galaxy clusters are widely adopted in strong-lensing studies, they cannot easily be distinguished based solely on observed positions of arcs and arclets. We compare the magnifications predicted for giant arcs obtained from isothermal and NFW profiles, taking axially-symmetric and asymmetric mass distributions into account. We find that arc magnifications can differ strongly between the two types of density profiles even if the image morphology is well reproduced. Magnifications by lenses with NFW density profiles are usually larger than those for lenses with singular or nearly singular isothermal density profiles, unless the latter have large cores. Asymmetries play an important role. We illustrate our results with the two well-studied clusters MS 2137 and A{\~{}}370. We confirm earlier results showing that both isothermal and NFW mass models can very well reproduce the observed arcs, radial arcs and other arclets. While the mass model for MS 2137 is not very well constrained, the two types of mass models produce strongly differing critical curves and caustics for A{\~{}}370. We find that the NFW mass profile is preferred for A{\~{}}370. We identify new arclet candidates in the field of A{\~{}}370. Redshift estimates allowed by the lens model are consistent with results in the literature, where available. Three newly found counter-images are suggested to arise from an active, dust-enshrouded star-forming galaxy at {\$}z\backslashapprox1.1{\$}.},
+archivePrefix = {arXiv},
+arxivId = {0805.1148},
+author = {Shu, Chenggang and Zhou, Binglu and Bartelmann, Matthias and Comerford, Julia M. and Huang, J.‐S. and Mellier, Yannick},
+doi = {10.1086/590049},
+eprint = {0805.1148},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/380f98989a82dcb476be521d9785614bdf535fc1.:},
+issn = {0004-637X},
+journal = {ApJ},
+month = {sep},
+number = {1},
+pages = {70--82},
+title = {{Comparisons between Isothermal and NFW Mass Profiles for Strong‐Lensing Galaxy Clusters}},
+url = {http://stacks.iop.org/0004-637X/685/i=1/a=70},
+volume = {685},
+year = {2008}
+}
+@article{Bartelmann1996,
+abstract = {Navarro, Frenk, $\backslash${\&} White have recently found numerically that the density profile of dark-matter halos can be described by a universal two-parameter function over a broad range of halo masses. The profile is singular, approaching the halo center with {\$}\backslashrho\backslashpropto r{\^{}}{\{}-1{\}}{\$}. It had been argued previously that radially distorted, gravitationally lensed images of background sources in galaxy clusters, so-called radial arcs, required a flat core in the cluster density profile. Such radial arcs have so far been detected in two galaxy clusters, in apparent contradiction with a singular density profile. I show here that the profile suggested by Navarro et al. can produce radial arcs despite its central singularity, and describe how the two parameters of the profile can be determined in clusters where radial and tangential arcs are observed. I then apply this analysis to the two clusters where radial arcs were detected. In both cases, the redshifts of the radial arcs are yet unknown, hence definitive conclusions on the profile parameters cannot yet be drawn. Numerically determined values for the parameters of cluster-sized halos can, however, be used to predict the range of the unknown arc redshifts, thus providing a direct observational test for the proposed density profile. A potential difficulty with the profile is that the radial magnification of tangential arcs is large, hence tangential arcs should be thick or their sources should be very thin in the radial direction.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/9602053},
+author = {Bartelmann, Matthias},
+eprint = {9602053},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/f5c601b89533d6fd2c5655582f6b9fe98368ee22.pdf:pdf},
+issn = {00046361},
+journal = {A{\&}A},
+month = {feb},
+pages = {1--10},
+primaryClass = {astro-ph},
+title = {{Arcs from a Universal Dark-Matter Halo Profile}},
+url = {http://arxiv.org/abs/astro-ph/9602053},
+year = {1996}
+}
+@article{Navarro1997,
+abstract = {We use high-resolution N-body simulations to study the equilibrium density profiles of dark matter halos in hierarchically clustering universes. We find that all such profiles have the same shape, independent of halo mass, of initial density fluctuation spectrum, and of the values of the cosmological parameters. Spherically averaged equilibrium profiles are well fit over two decades in radius by a simple formula originally proposed to describe the structure of galaxy clusters in a cold dark matter universe. In any particular cosmology the two scale parameters of the fit, the halo mass and its characteristic density, are strongly correlated. Low-mass halos are significantly denser than more massive systems, a correlation which reflects the higher collapse redshift of small halos. The characteristic density of an equilibrium halo is proportional to the density of the universe at the time it was assembled. A suitable definition of this assembly time allows the same proportionality constant to be used for all the cosmologies that we have tested. We compare our results to previous work on halo density profiles and show that there is good agreement. We also provide a step-by-step analytic procedure, based on the Press-Schechter formalism, which allows accurate equilibrium profiles to be calculated as a function of mass in any hierarchical model.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/9611107},
+author = {Navarro, Julio F. and Frenk, Carlos S. and White, Simon D. M.},
+doi = {10.1086/304888},
+eprint = {9611107},
+file = {:C$\backslash$:/Users/Ian/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/52df6a1cf57ef5741cca4b5d96265ec628c1b2be.pdf:pdf},
+isbn = {0004-637X},
+issn = {0004-637X},
+journal = {ApJ},
+month = {dec},
+number = {2},
+pages = {493--508},
+primaryClass = {astro-ph},
+title = {{A Universal Density Profile from Hierarchical Clustering}},
+url = {http://arxiv.org/abs/astro-ph/9611107{\%}0Ahttp://dx.doi.org/10.1086/304888 http://stacks.iop.org/0004-637X/490/i=2/a=493},
+volume = {490},
+year = {1997}
+}
 @book{Dodelson2017,
 author = {Dodelson, S},
 month = {jun},
@@ -23,6 +96,20 @@ url = {http://arxiv.org/abs/1304.0425{\%}0Ahttp://dx.doi.org/10.1051/0004-6361/2
 volume = {560},
 year = {2013}
 }
+@article{King2001,
+author = {King, L. J. and Schneider, P. and Springel, V.},
+doi = {10.1051/0004-6361:20011178},
+file = {:C$\backslash$:/Users/Ian/Google Drive/33-787 Gravitational Lensing/Lensing Project/references/King, Schneider, Springel - 2001.pdf:pdf},
+issn = {0004-6361},
+journal = {A{\&}A},
+month = {nov},
+number = {3},
+pages = {748--755},
+title = {{Cluster mass profiles from weak lensing: The influence of substructure}},
+url = {http://www.aanda.org/10.1051/0004-6361:20011178},
+volume = {378},
+year = {2001}
+}
 @article{Mainini2014,
 abstract = {Halo masses and concentrations have been studied extensively, by means of N-body simulations as well as observationally, during the last decade. Nevertheless, the exact form of the mass-concentration relation is still widely debated. One of the most promising method to estimate masses and concentrations relies on gravitational lensing from massive halos. Here we investigate the impact of the mass-concentration relation on halo peak abundance in weak lensing shear maps relying on the aperture mass method for peak detections. After providing a prescription to take into account the concentration dispersion (always neglected in previous works) in peak number counts predictions, we assess their power to constrain the mass-concentration relation by means of Fisher matrix technique. We find that, when combined with different cosmological probes, peak statistics information from near-future weak lensing surveys provides an interesting and complementary alternative method to lessen the long standing controversy about the mass-concentration relation.},
 archivePrefix = {arXiv},
@@ -38,20 +125,6 @@ number = {8},
 title = {{Constraining the mass-concentration relation through weak lensing peak function}},
 volume = {2014},
 year = {2014}
-}
-@article{King2001,
-author = {King, L. J. and Schneider, P. and Springel, V.},
-doi = {10.1051/0004-6361:20011178},
-file = {:C$\backslash$:/Users/Ian/Google Drive/33-787 Gravitational Lensing/Lensing Project/references/King, Schneider, Springel - 2001.pdf:pdf},
-issn = {0004-6361},
-journal = {A{\&}A},
-month = {nov},
-number = {3},
-pages = {748--755},
-title = {{Cluster mass profiles from weak lensing: The influence of substructure}},
-url = {http://www.aanda.org/10.1051/0004-6361:20011178},
-volume = {378},
-year = {2001}
 }
 @article{Meneghetti2013,
 abstract = {The existence of an arc statistics problem was at the center of a strong debate in the last fifteen years. With the aim to clarify if the optical depth for giant gravitational arcs by galaxy clusters in the so called concordance model is compatible with observations, several studies were carried out which helped to significantly improve our knowledge of strong lensing clusters, unveiling their extremely complex internal structure. In particular, the abundance and the frequency of strong lensing events like gravitational arcs turned out to be a potentially very powerful tool to trace the structure formation. However, given the limited size of observational and theoretical data-sets, the power of arc statistics as a cosmological tool has been only minimally exploited so far. On the other hand, the last years were characterized by significant advancements in the field, and several cluster surveys that are ongoing or planned for the near future seem to have the potential to make arc statistics a competitive cosmological probe. Additionally, recent observations of anomalously large Einstein radii and concentrations in galaxy clusters have reinvigorated the debate on the arc statistics problem. In this paper, we review the work done so far on arc statistics, focussing on what is the lesson we learned and what is likely to improve in the next years.},
