--- a/paper.tex
+++ b/paper.tex
@@ -8,6 +8,7 @@
 % \usepackage{txfonts}
 
 \graphicspath{ {figures/} }
+\linespread{1.3}
 
 
 \begin{document}
@@ -19,16 +20,23 @@
 
 \begin{abstract}
 We examine the feasibility of distinguishing NFW and cored isothermal density profiles using weak gravitational lensing shear.
- To do so, we use Python to model lenses in the two different profiles, as well as background galaxies to be lensed.
- Analyzing the simulated data of these lensed galaxies gives us insight into how we can distinguish the differences between the two profiles.
- This method is expected to be helpful in the analysis of real observation data in the future.
+
+We model lenses in the two different profiles, as well as background galaxies to be lensed.
+Analyzing the simulated data of these lensed galaxies gives us insight into how we can distinguish the differences between the two profiles.
+This method is expected to be helpful in the analysis of real observation data in the future.
 \end{abstract}
 
-\section{Introduction}
-Gravitational lensing allows us to investigate the matter density distributions of cosmic objects by observing the characteristic distortions imparted on other objects in the background. The principle is applicable on a large range of scales, from all-sky mass maps based on cosmic microwave background shear to studies of individual galaxies and clusters.
-A common use of lensing is
 
-Two commonly used density profiles in weak gravitational lensing are the isothermal profile and the Navarro-Frenk-White (NFW) profile.
+\section{Introduction}
+Gravitational lensing allows us to investigate the matter density distributions of cosmic objects by observing the characteristic distortions imparted on other objects in the background. The principle is applicable on a large range of scales, from all-sky mass maps based on cosmic microwave background shear to studies of individual galaxies and clusters. In particular, by observing the coherent distortions of many background galaxies, the shear profile, and consequently the density profile of a foreground halo lens may be determined.
+
+Two commonly used density profiles in the field are the isothermal profile and the Navarro-Frenk-White (NFW) profile. The NFW profile has been found to fit simulated dark matter halos very well \citep{}, while the isothermal profile .
+Both profiles have infinite extent
+
+Lensing offers one of the only ways to probe the distribution
+In this paper, we will investigate the distinguishability of
+given galaxy-galaxy lensing data
+
 We start with introducing the general characteristics of spherical density profiles, followed by cored isothermal and NFW profiles.
 We then describe the purpose of our project, to distinguish between NFW and isothermal profiles, in detail.
 The goal of this project is to devise a method to analyze lensed galaxy cluster data and find which density profile is more probable between the isothermal and NFW profiles.
@@ -44,6 +52,8 @@ We describe the common characteristics of spherical density profiles.
 Here we define our conventions for various lensing quantities, which mainly conform to those used by \citet{Dodelson2017}. We use the thin lens approximation and assume spherical lens profiles.
 Consider such a spherically symmetric halo density profile $\rho(r)$
 
+The lens halo is located at an angular diameter distance $D_L$ from the observer and we want to consider its effects on a source object behind it at an angular diameter distance $D_S$.
+
 The projected surface density at radius R on the projected plane is defined, considering the z axis to be along the line of sight:
 \begin{equation}
 \Sigma(R) = \int_{-\infty}^{\infty}{dz\ \rho(\sqrt{R^2 + z^2})}
@@ -56,7 +66,7 @@ An important related measure in gravitational lensing is the average projected s
 
 The critical surface density marks the typical boundary between what is considered strong and weak lensing:
 \begin{equation}
-\Sigma_\mathrm{crit} = \frac{c^2}{4\pi G} \frac{D_S}{D_{SL} D_L}
+\Sigma_\mathrm{crit} = \frac{c^2}{4\pi G} \frac{D_S}{(D_S - D_L) D_L}
 \end{equation}
 
 At small angles, we can assume from small angle approximations that $R = D_L \theta$.
@@ -105,7 +115,7 @@ while ellipticity is
 
 
 \section{Cored Isothermal Sphere Profile}
-The cored isothermal sphere (CIS) profile is related to the singular isothermal sphere, which is often used to describe halos and other collapsed astrophysical objects because of its simple formulation. Unlike the singular isothermal sphere, the cored isothermal sphere does not have a density singularity at its center due to a finite core radius $r_c$. The CIS density profile is defined:
+The cored isothermal sphere (CIS) profile is related to the singular isothermal sphere profile, which is often used to describe halos and other collapsed astrophysical objects because of its simple formulation. Unlike the singular isothermal sphere, the cored isothermal sphere does not have a density singularity at its center due to a finite core radius $r_c$. The CIS density profile is defined:
 
 \begin{equation}
 \rho_\mathrm{iso}(r) = \frac{\sigma^2}{2\pi G (r^2 + {r_c}^2)}
@@ -154,7 +164,8 @@ r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}
 The ellipticity equations, while not quite elegant, are trivial to calculate from the shear.
 
 \begin{figure}
-    \includegraphics{isothermalproperties.pdf}
+    \centering
+    \includegraphics[width=0.8\textwidth]{isothermalproperties.pdf}
     \caption{Lensing quantities for a CIS profile with $M_{200} = 10^{15} M_\odot$ and $r_c = 10$ kpc.}
     \label{}
 \end{figure}
@@ -213,7 +224,8 @@ c = \frac{r_{200}}{r_s}
 \end{equation}
 
 \begin{figure}
-    \includegraphics{nfwproperties.pdf}
+    \centering
+    \includegraphics[width=0.8\textwidth]{nfwproperties.pdf}
     \caption{Lensing quantities for a NFW profile with $M_{200} = 10^{15} M_\odot$ and $c = 10$.}
     \label{}
 \end{figure}
@@ -234,14 +246,15 @@ Based on the calculations shown above, we have modelled singular lenses correspo
     \end{itemize}
     \item Construct background galaxies:
     \begin{itemize}
-        \item Number density on sky: 50 galaxies/square arcminute
-        \item Intrinsic ellipticity drawn from Gaussian distribution with $\mu=0, \sigma=0.2$
+        \item Number density on sky: 50 galaxies/square arcminute (LSST, https://arxiv.org/pdf/1305.0793.pdf)
+        \item Intrinsic ellipticity drawn from Gaussian distribution with $\mu=0, \sigma=0.2$ (consistent with https://arxiv.org/pdf/1509.05058.pdf)
         \item Assume they are all that the same distance $D_S$ since this can be determined by redshift (neglecting some noise)
     \end{itemize}
     \item Recommended values:
     \begin{itemize}
         \item $z_L = 0.3$ (bullet cluster)
-        \item $z_S = 1.0$ (Hubble Deep Field)
+        \item $z_S = 1.0$ (Hubble Deep Field) (also consistent with https://arxiv.org/pdf/1509.05058.pdf)
+        we use the planck 2015 results
         \item $M_{halo} = 10^{15} M_\odot$
     \end{itemize}
 \end{enumerate}
@@ -250,6 +263,7 @@ Based on the calculations shown above, we have modelled singular lenses correspo
 We applied the shear and deflection angles to background galaxies to get simulated data: $N$ sets of $\epsilon_1$, $\epsilon_2$, $\theta_1$, $\theta_2$
 
 \begin{figure}
+    \centering
     \includegraphics[width=0.49\textwidth]{isothermalellipticities.pdf}
     \includegraphics[width=0.49\textwidth]{nfwellipticities.pdf}
     \caption{plots}
@@ -268,13 +282,29 @@ What theta range should we look at? (5 arcminutes?)
 
 How to properly do sigma contours?
 
-\section{Results and Conclusion}
+\section{Results}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.9\textwidth]{comparison.pdf}
+    \caption{plots}
+    \label{}
+\end{figure}
+
+\section{Conclusions}
 
 Like (COMPARISONS BETWEEN ISOTHERMAL AND NFW MASS PROFILES
 FOR STRONG-LENSING GALAXY CLUSTERS), we find that the strong lensing regime provides the most
 But also, weak lensing can in fact provide sufficient distinguishability
 
+has been applied to observations before
+https://arxiv.org/pdf/astro-ph/9602053.pdf
+but not in the context of comparing density profiles using for strong and weak
+but this is highly dependent on good data
+
+http://iopscience.iop.org/article/10.1086/590049/pdf looked at NFW vs isothermal in strong lensing with a focus on arcs, and found differing levels of distinguishibility for different lenses.
+
+https://arxiv.org/pdf/1101.0650.pdf - our results don't match
 
 From our data analysis, we were able to find the more probable density profile of a simulated data set.
 Since the simulated data is based on the NFW and isothermal profile models, we were able to decisively distinguish between the two.
