Added intrinsic ellipticity to figures

--- a/paper.tex
+++ b/paper.tex
@@ -306,6 +306,8 @@ http://iopscience.iop.org/article/10.1086/590049/pdf looked at NFW vs isothermal
 
 https://arxiv.org/pdf/1101.0650.pdf - our results don't match
 
+ignore cosmic shear (https://journals.aps.org/prd/pdf/10.1103/PhysRevD.70.023008)
+
 From our data analysis, we were able to find the more probable density profile of a simulated data set.
 Since the simulated data is based on the NFW and isothermal profile models, we were able to decisively distinguish between the two.
 When analyzing real observed data, we expect the probability ratios to be relatively more even.
