--- a/paper.tex
+++ b/paper.tex
@@ -177,7 +177,7 @@ The ellipticity equations, while not quite elegant, are trivial to calculate fro
 \rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_c}{(r/r_s)\left(1 + r/r_s\right)^2}
 \end{equation}
 
-What redshift is $\rho_\mathrm{crit}$ evaluated at? - at halo redshift - can we use current time?
+%What redshift is $\rho_\mathrm{crit}$ evaluated at? - at halo redshift - can we use current time?
 
 % \begin{equation}\Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_c r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}}  \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) \right)
 % \end{equation}
@@ -206,7 +206,7 @@ Similar convention used by \citet{Bartelmann2001}
 \gamma_\mathrm{NFW}(\theta) = \frac{\overline{\Sigma}_\mathrm{NFW}(\theta) - \Sigma_\mathrm{NFW}(\theta)}{\Sigma_\mathrm{crit}}
 \end{equation}
 
-Can calculate ellipticities from tangential shear.
+We can calculate ellipticities from tangential shear.
 
 We switch the dependence to $M_{200}$ and $c$ with:
 
@@ -276,9 +276,9 @@ Based on the calculations shown above, we have modelled singular lenses correspo
 \item Attempt to fit both NFW and isothermal profiles, see if the fit is distinguishable
 \end{enumerate}
 
-What theta range should we look at? (5 arcminutes?)
+%What theta range should we look at? (5 arcminutes?)
 
-How to properly do sigma contours?
+%How to properly do sigma contours?
 
 \section{Results}
 
@@ -311,7 +311,7 @@ Since the simulated data is based on the NFW and isothermal profile models, we w
 When analyzing real observed data, we expect the probability ratios to be relatively more even.
 Future goals include the use of these methods to analyze observed data of galaxy clusters to find the density profile of their lenses.
 
-Where to go from here?
+%Where to go from here?
 
 
 \bibliographystyle{plainnat}
